@@ -4,6 +4,8 @@
 	- copy CHANGELOG* and URL tags to all subpackages
 	- follow symlinks when packaging sources
 	- handle %files -f with no %setup (no build directory)
+	- fixed ugly i18n header bug
+	- deal with lang paths sanely when entries are missing languages
 	
 2.5 -> 2.5.1:
 	- fail if sources are not regular files
